// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Text Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hzcCxX"
    >
      <p
        class="Text-sc-15glbbx-0 kEBDnw"
        color="currentColor"
        disabled=""
        font-size="medium"
      >
        Disabled text
      </p>
    </div>
    <div
      class="Box-xda4ls-0 caqRcm"
    >
      <p
        class="Text-sc-15glbbx-0 gphSLz"
        color="white"
        disabled=""
        font-size="medium"
      >
        Disabled text
      </p>
    </div>
    <div
      class="Box-xda4ls-0 mccpx"
    >
      <p
        class="Text-sc-15glbbx-0 gphSLz"
        color="white"
        disabled=""
        font-size="medium"
      >
        Disabled text
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Text Set to inline 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <span
      class="Text-sc-15glbbx-0 dyWMLQ"
      color="currentColor"
      font-size="medium"
    >
      Inline text
    </span>
    <span
      class="Text-sc-15glbbx-0 gSNEe"
      color="currentColor"
      font-size="medium"
    >
      Inline text
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Text Text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="Text-sc-15glbbx-0 gSNEe"
      color="currentColor"
      font-size="medium"
    >
      Default text
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Text With a color 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="Text-sc-15glbbx-0 kPFVhp"
      color="blue"
      font-size="medium"
    >
      Blue text
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Text With a custom margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="Text-sc-15glbbx-0 lglVFw"
      color="currentColor"
      font-size="medium"
    >
      Text 24px bottom margin.
    </p>
    <p
      class="Text-sc-15glbbx-0 gSNEe"
      color="currentColor"
      font-size="medium"
    >
      Text with default (0px) bottom margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Text With a size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 cvbdIx"
    >
      <p
        class="Text-sc-15glbbx-0 gSNEe"
        color="currentColor"
        font-size="medium"
      >
        Default (16px/24px)
      </p>
    </div>
    <div
      class="Box-xda4ls-0 cvbdIx"
    >
      <p
        class="Text-sc-15glbbx-0 kwndEi"
        color="currentColor"
        font-size="small"
      >
        Small (14px/24px)
      </p>
      <p
        class="Text-sc-15glbbx-0 JOLV"
        color="currentColor"
        font-size="small"
      >
        Small Compressed (14px/16px)
      </p>
    </div>
    <div
      class="Box-xda4ls-0 cvbdIx"
    >
      <p
        class="Text-sc-15glbbx-0 YlxFH"
        color="currentColor"
        font-size="smaller"
      >
        Smaller (12px/16px)
      </p>
    </div>
  </div>
</div>
`;
